# nixops-vault

./: .mypy.ini  README.md  pyproject.toml  release.nix  setup.py
.github/workflows/: ci.yml
examples/: vault-approle.nix
nix/: vault-kv-secret-engine.nix  vault-policy.nix
nixops_vault/: plugin.py  vault_common.py
nixops_vault/nix/: default.nix  vault-approle.nix  vault-kv-secret-engine.nix
nixops_vault/resources/: __init__.py  vault_approle.py  vault_kv_secret_engine.py  vault_policy.py
nixops_vault/resources/types/: vault_approle.py  vault_kv_secret_engine.py  vault_policy.py
nixopshashicorpvault/: plugin.py
nixopshashicorpvault/resources/: vault_policy.py
nixopsvault/: plugin.py  vault_common.py
nixopsvault/resources/: __init__.py  vault_approle.py  vault_kv_secret_engine.py  vault_policy.py
